--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/gcc.html">German Chocolate Cake</a></li>
+            <li></li>
+            <li></li>
+        </ul>
     </body>
 </html>
