compete gcc.html

--- a/recipes/gcc.html
+++ b/recipes/gcc.html
@@ -8,5 +8,40 @@
 
     <body>
         <h1>German Chocolate Cake</h1>
+        <img src="../img/gcc.jpg" alt="German chocolate cake">
+        <h2>Description</h2>
+        <p>German Chocolate Cake with brown sugar and coconut topping.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 ½ cups cake flour</li>
+            <li>1 cup white sugar</li>
+            <li>½ teaspoon baking powder</li>
+            <li>½ teaspoon baking soda</li>
+            <li>½ teaspoon salt</li>
+            <li>⅓ cup butter, softened</li>
+            <li>⅜ cup buttermilk</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>4 (1 ounce) squares German sweet chocolate</li>
+            <li>2 eggs</li>
+            <li>⅜ cup buttermilk</li>
+            <li>⅔ cup flaked coconut</li>
+            <li>½ cup packed brown sugar</li>
+            <li>2 tablespoons cream</li>
+            <li>¼ cup chopped walnuts</li>
+            <li>¼ cup butter, softened</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 350 degrees F (175 degrees C). Grease and flour one 9 inch square cake pan. 
+                Sift the cake flour, 1 cup white sugar, baking powder, baking soda, and salt together.</li>
+            <li>Cream 1/3 cup of the butter or margarine. Stir in 3/8 cup buttermilk and 1 teaspoon vanilla.
+                 Blend in the flour mixture and beat with an electric mixer on medium speed for 2 minutes. 
+                 Add the melted and cooled German sweet chocolate, eggs, and the remaining 3/8 cup buttermilk. 
+                 Continue to beat at medium speed for another minute more. Pour batter into the prepared pan.</li>
+            <li>Bake at 350 degrees F (175 degrees C) for 40 minutes. Cool in pan for 15 minutes then frost.</li>
+            <li>To Make Frosting: Combine the coconut, brown sugar, cream, chopped nuts, 1/4 cup butter or margarine.
+                 Mix until of a spreadable consistency. Spread over top of baked cake. Broil 3 inches from heat until
+                  browned (about 3 minutes). Serve cake warm or cold.</li>
+        </ol>
     </body>
 </html>
