Add 2 more recipes

--- a/recipes/gcc.html
+++ b/recipes/gcc.html
@@ -43,5 +43,6 @@
                  Mix until of a spreadable consistency. Spread over top of baked cake. Broil 3 inches from heat until
                   browned (about 3 minutes). Serve cake warm or cold.</li>
         </ol>
+        <p><a href="../index.html">Home</a></p>
     </body>
 </html>
