--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
+            <li><a href="./recipes/fc.html">Fried Chicken</a></li>
             <li><a href="./recipes/gcc.html">German Chocolate Cake</a></li>
-            <li></li>
-            <li></li>
+            <li><a href="./recipes/is.html">Italian Sub</a></li>
         </ul>
     </body>
 </html>
