--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <img src="./img/chef.jpg" alt="The chef I wish i was">
         <ul>
             <li><a href="./recipes/fc.html">Fried Chicken</a></li>
             <li><a href="./recipes/gcc.html">German Chocolate Cake</a></li>
