--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Odin Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
         <img src="./img/chef.jpg" alt="The chef I wish i was">
+        <h2>Current Recipes</h2>
         <ul>
             <li><a href="./recipes/fc.html">Fried Chicken</a></li>
             <li><a href="./recipes/gcc.html">German Chocolate Cake</a></li>
